--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,12 +2,12 @@
 	<div class="container">
 		<div class="row">
 
-			<h2 class="index-title">投稿一覧 (全<%= @count %>件)</h2>
+			<h2 class="index-title">投稿一覧 (全<%= @count %>件・新着順)</h2>
 
 			<div class="search-title">
-			 	<%= form_tag(blogs_search_path, :method => 'get') do %>
+			 	<%= form_tag(blogs_search_title_path, :method => 'get') do %>
 			    	<%= text_field_tag :search_title %>
-			    	<%= submit_tag '店名検索', :name => nil, class: 'search-title-bt' %>
+			    	<%= submit_tag '店名検索', class: 'search-title-bt' %>
 			  	<% end %>
 			</div>
 
