--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -50,26 +50,27 @@
 .about-body {
 	text-align: left;
 	font-size: 20px;
-	font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;;
 }
 
 .about-title {
 	font-size: 30px;
-	color: #5d99ff;
+	color: #3333ff;
+	font-family: '昔々ふぉんと';
 }
 
 .about-content {
 	font-size: 20px;
-	color: green;
-	font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;;
+	color: #5d99ff;
+	font-family: '昔々ふぉんと';
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
 
-.about-last {
-	font-size: 20px;
+.about-use {
+	margin-top: 40px;
+	font-size: 30px;
 	color: #ff88ff;
-	font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;;
+	font-family: '昔々ふぉんと';
 }
 
 .about-blog-index {
