--- a/app/views/blog_comments/_comment.html.erb
+++ b/app/views/blog_comments/_comment.html.erb
@@ -15,8 +15,11 @@
 	          <td class="blog-show-content blog-show-comment">
 	          	<%= blog_comment.comment %>
 	          </td>
-	          <% if current_customer == blog_comment.customer || current_customer.admin? %>
-	            <td><%= link_to '', blog_comment_path(blog_comment), class: 'glyphicon glyphicon-trash comment-deletebt', method: :delete, remote: true %></td>
+	          <!-- ログインしていて、ログイン者か管理者なら、コメント削除ボタン表示 -->
+	          <% if customer_signed_in? %>
+		          <% if current_customer == blog_comment.customer || current_customer.admin? %>
+		            <td><%= link_to '', blog_comment_path(blog_comment), class: 'glyphicon glyphicon-trash comment-deletebt', method: :delete, remote: true %></td>
+		          <% end %>
 	          <% end %>
 	        </tr>
   		<% end %>
