--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -8,18 +8,32 @@
 						都会の喧騒に疲れてしまい、癒されたい...<br>
 						でも、ファミリー向けの動物園に行きにくい人<br>
 						遠出するのが面倒くさい人<br>
-						そんなあなたに見てもらいたい！<br>
-						このサイトは、<br>
-						都内で動物に会えるお店を紹介するサイトです！<br>
+						そんな人に見てもらいたい！<br>
+						Healingは、<br>
+						都内で動物に会えるお店を教え合う会員制投稿サイトです！<br>
+						会員登録なしでも閲覧は可能です！<br>
 					</div>
-					<strong class="about-last">
-						動物から癒されたら、また明日から頑張りましょう！
-					</strong>
-
 					<div class="about-blog-index">
 						<%= link_to "投稿を見る", blogs_path, class: "btn btn-info" %>
 						<%= link_to "会員登録する", new_customer_registration_path, class: "btn btn-danger" %>
 					</div>
+					<div class="about-blog-index">
+						<%= link_to "ログイン", new_customer_session_path, class: "btn btn-success" %>
+					</div>
+
+					<div class="about-use">
+						Healingの使い方
+					</div>
+					<div class="about-content">
+						投稿一覧と投稿詳細は会員登録なしでも閲覧可能<br>
+						・店名検索や動物の種類検索もできます<br>
+						会員登録すると、<br>
+						・投稿ができます<br>
+						・投稿に対する、お気に入り登録やコメントすることもできます<br>
+						・会員一覧から自分のページに移れば、<br>
+						お気に入り登録している投稿が見られます
+					</div>
+
 			</div>
 		</div>
 	</div>
