--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,8 +5,9 @@
 				<div class="top-title">
 					<%= link_to homes_about_path do %>
 					<div class="top-font-style">
-							疲れていませんか？<br>
-							動物たちに癒されに行きましょう
+							Welcome to Healing<br>
+							都会の喧騒に疲れてませんか？<br>
+							ここをクリックして動物たちに癒されに行きましょう
 					</div>
 					<% end %>
 				</div>
