--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,15 @@
 @import "slick";
 
 
+
+.navbar {
+  background-color: #eeeeee;
+}
+
+.nav-style {
+  font-family: '昔々ふぉんと';
+}
+
 .icon-bar {
 	background-color: #8eb8ff;
 }
@@ -31,29 +40,12 @@ body {
   height: 100%;
 	}
 
-.navbar {
-	background-color: #eeeeee;
+.btn {
+  font-family: '昔々ふぉんと';
 }
-
 
 .form-box {
 	margin-top: 30px;
-}
-
-.panel-title {
-	font-size: 25px;
-	text-align: center;
-}
-
-.slick-dots {
-  li {
-    font-size: 15px !important;
-    button:before {
-      content: "★" !important;
-      font-size: 10px !important;
-      color: rgb(60, 60, 60) !important;
-    }
-  }
 }
 
 ul {
@@ -62,6 +54,16 @@ ul {
 
 .error-style {
   color: red;
+}
+
+.panel-title {
+	font-size: 25px;
+	text-align: center;
+  font-family: '昔々ふぉんと';
+}
+
+.panel-body {
+  font-family: '昔々ふぉんと';
 }
 
 .pagination>li>a {
@@ -86,71 +88,107 @@ ul {
   margin: 0 3%;
 }
 
+#page_top{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background: #3f98ef;
+  opacity: 0.6;
+  border-radius: 50%;
+}
+#page_top a{
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  text-decoration: none;
+}
+#page_top a::before{
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f102';
+  font-size: 25px;
+  color: #fff;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: -5px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+}
+
+
 
 
 
 
 @media screen and (max-width: 768px) {
 
-.container {
-  width: 90%;
-}
+  .container {
+    width: 90%;
+  }
 
-.top-img {
-  width: 100%;
-  height: 100vh;
-  background-image: image-url("liam-burnett-blue--qwEUsg7UbI-unsplash.jpg");
-  background-size: 100% 100%;
-}
+  .navbar-header {
+    float: right;
+    width: 40px;
+    margin-right: 5%;
+  }
 
-.top-font-style {
-  text-align: center;
-  font-size: 18px;
-  color: blue;
-  font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;
-  background-color: rgba(255, 255, 255, 0.2);
-}
+  nav {
+    float: none;
+  }
 
-.about-img {
-  width: 100%;
-  height: 100vh;
-  background-image: image-url("t-r-photography-TzjMd7i5WQI-unsplash.jpg");
-  background-size: 100% 100%;
-}
 
-.about-title {
-  font-size: 20px;
-}
+  .top-img {
+    width: 100%;
+    height: 100vh;
+    background-image: image-url("liam-burnett-blue--qwEUsg7UbI-unsplash.jpg");
+    background-size: 100% 100%;
+  }
 
-.about-content {
-  font-size: 10px;
-}
+  .top-font-style {
+    text-align: center;
+    font-size: 18px;
+    color: blue;
+    font-family: '昔々ふぉんと';
+    background-color: rgba(255, 255, 255, 0.2);
+  }
 
-.about-last {
-  font-size: 10px;
-}
+  .about-img {
+    width: 100%;
+    height: 100vh;
+    background-image: image-url("t-r-photography-TzjMd7i5WQI-unsplash.jpg");
+    background-size: 100% 100%;
+  }
 
-.navbar-header {
-  float: right;
-  width: 40px;
-  margin-right: 5%;
-}
+  .about-title {
+    font-size: 20px;
+  }
 
-nav {
-  float: none;
-}
+  .about-content {
+    font-size: 10px;
+  }
 
-.table-scroll-comment {
-  width: 300px;
-}
+  .about-use {
+    font-size: 10px;
+  }
 
-.blog-photo-show {
-  height: 150px;
-}
+  .table-scroll-comment {
+    width: 300px;
+  }
 
-.a .slick-slide {
-  height: 200px;
-}
+  .blog-show-photo {
+    height: 150px;
+  }
+
+  .show-slider .slick-slide {
+    height: 200px;
+  }
 
 
 }
