--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,54 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.index-title {
-	font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
+
+.search-var-style {
+	width: 140px;
+}
+
+.search-title {
+	margin: 15px 0;
+	font-family: '昔々ふぉんと';
+}
+
+.panel-genre-title {
+	text-align: center;
+}
+.genre-panel-style {
+	text-align: center;
+}
+
+.blog-index-title {
+	font-family: '昔々ふぉんと';
 	color: #3399ff;
-}
-
-.a .slick-slide {
-	height: 500px;
-	margin: 0 8%;
-}
-
-.blog-photo-show {
-  	height: 400px;
-  	width: 50%;
-  	margin: 3% 25%;
-}
-
-.b .slick-slide {
-  	width: 80%;
-  	height: 200px;
-}
-
-.blog-photo-index {
-  	width: 80%;
-  	height: 200px;
-}
-
-.table-scroll {
-	overflow-x : scroll;
-	margin: 0 3%;
-}
-
-.table-scroll-comment {
-	overflow-x : scroll;
-	margin: 0 3%;
-	width: 400px;
-}
-
-.blog-show-content-title {
-	color: #008080;
-	font-size-: 20px;
-}
-
-.blog-show-content {
-	font-size: 15px;
-	text-align: left;
-	width: 80%;
-	height: 50px;
-	word-break: break-all;
 }
 
 .flex-blog {
@@ -63,12 +35,84 @@
 .flex-blog-content {
 	margin: 20px;
 	width: 200px;
+	font-family: '昔々ふぉんと';
 }
 
-.index-blog-title {
+.blog-index-photo {
+  	width: 80%;
+  	height: 200px;
+  	border-radius: 10%;
+}
+
+.blog-title {
 	font-size: 15px;
 }
 
+.index-slider .slick-slide {
+  	width: 80%;
+  	height: 200px;
+}
+
+.slick-dots {
+  li {
+    font-size: 15px !important;
+    button:before {
+      content: "★" !important;
+      font-size: 10px !important;
+      color: rgb(60, 60, 60) !important;
+    }
+  }
+}
+
+.show-slider .slick-slide {
+	height: 500px;
+	margin: 0 8%;
+}
+
+.blog-show-photo {
+  	height: 400px;
+  	width: 50%;
+  	margin: 3% 25%;
+  	border-radius: 10%;
+}
+
+.blog-show-content-title {
+	color: #008080;
+	font-size-: 20px;
+	font-family: '昔々ふぉんと';
+}
+
+.blog-show-content {
+	font-size: 15px;
+	text-align: left;
+	width: 80%;
+	height: 50px;
+	word-break: break-all;
+	font-family: '昔々ふぉんと';
+}
+
+.url-style {
+	font-size: 10px;
+	text-align: left;
+	width: 100%;
+}
+
+.table-scroll {
+	overflow-x : scroll;
+	margin: 0 3%;
+}
+
+.table-scroll-comment {
+	overflow-x : scroll;
+	margin: 0 3%;
+	width: 400px;
+	font-family: '昔々ふぉんと';
+}
+
+.comment-form {
+	margin: 0 3%;
+	font-family: '昔々ふぉんと';
+}
 
 .blog-show-comment {
 	width: 100%;
@@ -82,24 +126,5 @@
 	font-weight: bold;
 }
 
-.comment-form {
-	margin: 0 3%;
-}
 
-.url-style {
-	font-size: 10px;
-	text-align: left;
-	width: 100%;
-}
-
-.search-var-style {
-	width: 140px;
-}
-
-.panel-genre-title {
-	text-align: center;
-}
-.genre-panel-style {
-	text-align: center;
-}
 
