--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -8,12 +8,18 @@
 
 .name-style {
 	font-size: 15px;
-	font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
+	font-family: '昔々ふぉんと';
 	font-weight: bolder;
 }
 
 .my-customer {
 	background-color: #ffffcc;
+	font-family: '昔々ふぉんと';
+}
+
+.panel-title-customershow {
+	font-size: 20px;
+	font-family: '昔々ふぉんと';
 }
 
 .flex-favorite-box {
@@ -29,6 +35,7 @@
 	text-align: center;
 }
 
-.panel-title-customershow {
-	font-size: 20px;
+.myblog {
+	font-family: '昔々ふぉんと';
+	color: #2c7cff;
 }
