--- a/app/views/blogs/search.html.erb
+++ b/app/views/blogs/search.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 
 
-    <h2 class="index-title"><%= params[:genre] %> (全<%= @count %>件)</h2>
+    <h2 class="blog-index-title"><%= params[:genre] %> (全<%= @count %>件)</h2>
 
       <div class="search-var-style">
         <%= render 'search' %><!-- 種類検索パネル -->
