--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -29,7 +29,7 @@
 .top-font-style {
 	text-align: center;
 	font-size: 30px;
-	color: white;
+	color: #33ffff;
 	font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;
 	background-color: rgba(0, 0, 0, 0.3);
 }
