--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,9 +1,9 @@
 <div class="about-img">
 	<div class="container">
-	<div class="row">
-		<div class="about-box">
-			<div class="about-body">
-				<div class="about-title">Healingの趣旨</div>
+		<div class="row">
+			<div class="about-box">
+				<div class="about-body">
+					<div class="about-title">Healingの趣旨</div>
 					<div class="about-content">
 						都会の喧騒に疲れてしまい、癒されたい...<br>
 						でも、ファミリー向けの動物園に行きにくい人<br>
@@ -11,7 +11,6 @@
 						そんな人に見てもらいたい！<br>
 						Healingは、<br>
 						都内で動物に会えるお店を教え合う会員制投稿サイトです！<br>
-						会員登録なしでも閲覧は可能です！<br>
 					</div>
 					<div class="about-blog-index">
 						<%= link_to "投稿を見る", blogs_path, class: "btn btn-info" %>
@@ -21,9 +20,7 @@
 						<%= link_to "ログイン", new_customer_session_path, class: "btn btn-success" %>
 					</div>
 
-					<div class="about-use">
-						Healingの使い方
-					</div>
+					<div class="about-use">Healingの使い方</div>
 					<div class="about-content">
 						投稿一覧と投稿詳細は会員登録なしでも閲覧可能<br>
 						・店名検索や動物の種類検索もできます<br>
@@ -34,8 +31,8 @@
 						お気に入り登録している投稿が見られます
 					</div>
 
+				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 </div>
