--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,11 @@
       </button>
     </div>
 
-
+    <nav class='nav navbar-nav navbar-left' >
+      <%= link_to root_path do %>
+        <span class="head-text">Healing</span>
+      <% end %>
+    </nav>
 
     <nav>
       <ul id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse">
