--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,12 @@
 @import "slick";
 
 
+.navbar-left {
+  margin-top: 10px;
+  font-family: '昔々ふぉんと';
+  color: #0033ff;
+  font-size: 20px;
+}
 
 .navbar {
   background-color: #eeeeee;
