--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,94 +1,95 @@
 <div class="form-box">
-<div class="container">
-<div class="row">
+	<div class="container">
+		<div class="row">
 
-	<% if @blog.blog_images.present? %>
-		<div class="show-slider">
-			<% @blog.blog_images.each do |image| %>
-			  	<%= attachment_image_tag image, :photo, size: "50x50", class: "blog-show-photo" %>
+			<% if @blog.blog_images.present? %>
+				<div class="show-slider">
+					<% @blog.blog_images.each do |image| %>
+				  		<%= attachment_image_tag image, :photo, size: "50x50", class: "blog-show-photo" %>
+					<% end %>
+				</div>
+			<% else %>
+				<%= image_tag 'IMG_2667_2.jpg', class: "blog-show-photo" %>
 			<% end %>
+
+			<div class="panel panel-info">
+	    		<div class="panel-heading">
+					<h2 class="panel-title"><%= @blog.title %></h2>
+	    		</div>
+			</div>
+
+			<div class="table-scroll">
+		      	<table class="table">
+			      	<tr>
+				    	<th class="blog-show-content-title">説明</th>
+				    	<td class="blog-show-content"><%= @blog.body %></td>
+				    </tr>
+
+				    <tr>
+				    	<th class="blog-show-content-title">種類</th>
+				    	<td class="blog-show-content"><%= @blog.genre %></td>
+				    </tr>
+
+				    <tr>
+				    	<th class="blog-show-content-title">住所</th>
+				    	<td class="blog-show-content"><%= @blog.address %></td>
+				    </tr>
+
+				    <tr>
+				    	<th class="blog-show-content-title">URL</th>
+				    	<td class="blog-show-content">
+				    		<%= auto_link(simple_format(@blog.url_content), html: { target: '_blank' }) %>
+			    		</td>
+				    </tr>
+
+				    <tr>
+				    	<th class="blog-show-content-title">投稿者</th>
+				    	<td class="blog-show-content">
+				    		<%= link_to customer_path(@blog.customer) do %>
+				    			<%= @blog.customer.name %>
+				    		<% end %>
+				    	</td>
+				    </tr>
+
+				     <tr>
+				    	<th class="blog-show-content-title">投稿日</th>
+				    	<td class="blog-show-content"><%= @blog.created_at.strftime('%Y/%m/%d') %></td>
+				    </tr>
+
+					<tr>
+						<th class="blog-show-content-title">お気に入り</th>
+						<td id="likes_buttons_<%= @blog.id %>">
+				            <%= render partial: 'favorites/like', locals: { blog: @blog} %>
+				        </td>
+					</tr>
+
+					<tr>
+						<!-- ログインしていて、ログイン者か管理者なら、投稿の編集/削除ボタン表示 -->
+						<% if customer_signed_in? %>
+					    	<% if @blog.customer == current_customer || current_customer.admin? %>
+				      			<th><%= link_to "編集", edit_blog_path(@blog.id), class: "btn btn-success" %></th>
+				      			<td><%= link_to "削除", blog_path, class: 'btn btn-danger', method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+			      			<% end %>
+			      		<% end %>
+					</tr>
+				</table>
+		    </div>
+
+
+			<div class="comments_buttons_<%= @blog.id %>">
+				<%= render partial: 'blog_comments/comment', locals: {count:@count, blog_comments: @blog_comments} %>
+			</div>
+
+
+		  	<% if customer_signed_in? %>
+		     	<div class="comment-form">コメント記入欄(50字以内)
+			      	<%= form_with model: [@blog, @blog_comment], data: {remote: true} do |f| %>
+		    	    	<%= f.text_area :comment, size: "30x4" %>
+		        		<%= f.submit 'コメント投稿', class: "btn btn-info" %>
+		      		<% end %>
+		    	</div>
+			<% end %>
+
 		</div>
-	<% else %>
-		<%= image_tag 'IMG_2667_2.jpg', class: "blog-show-photo" %>
-	<% end %>
-
-	<div class="panel panel-info">
-	    <div class="panel-heading">
-			<h2 class="panel-title"><%= @blog.title %></h2>
-	    </div>
 	</div>
-
-	<div class="table-scroll">
-      	<table class="table">
-
-	      	<tr>
-		    	<th class="blog-show-content-title">説明</th>
-		    	<td class="blog-show-content"><%= @blog.body %></td>
-		    </tr>
-
-		    <tr>
-		    	<th class="blog-show-content-title">種類</th>
-		    	<td class="blog-show-content"><%= @blog.genre %></td>
-		    </tr>
-
-		    <tr>
-		    	<th class="blog-show-content-title">住所</th>
-		    	<td class="blog-show-content"><%= @blog.address %></td>
-		    </tr>
-
-		    <tr>
-		    	<th class="blog-show-content-title">URL</th>
-		    	<td class="blog-show-content"><%= auto_link(simple_format(@blog.url_content), html: { target: '_blank' }) %></td>
-		    </tr>
-
-		    <tr>
-		    	<th class="blog-show-content-title">投稿者</th>
-		    	<td class="blog-show-content">
-		    		<%= link_to customer_path(@blog.customer) do %>
-		    			<%= @blog.customer.name %>
-		    		<% end %>
-		    	</td>
-		    </tr>
-
-		     <tr>
-		    	<th class="blog-show-content-title">投稿日</th>
-		    	<td class="blog-show-content"><%= @blog.created_at.strftime('%Y/%m/%d') %></td>
-		    </tr>
-
-			<tr>
-				<th class="blog-show-content-title">お気に入り</th>
-				<td id="likes_buttons_<%= @blog.id %>">
-		            <%= render partial: 'favorites/like', locals: { blog: @blog} %>
-		        </td>
-			</tr>
-
-			<tr>
-				<!-- ログインしていて、ログイン者か管理者なら、投稿の編集/削除ボタン表示 -->
-				<% if customer_signed_in? %>
-			    	<% if @blog.customer == current_customer || current_customer.admin? %>
-		      			<th><%= link_to "編集", edit_blog_path(@blog.id), class: "btn btn-success" %></th>
-		      			<td><%= link_to "削除", blog_path, class: 'btn btn-danger', method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
-	      			<% end %>
-	      		<% end %>
-			</tr>
-
-		</table>
-    </div>
-
-
-	<div class="comments_buttons_<%= @blog.id %>">
-		<%= render partial: 'blog_comments/comment', locals: {count:@count, blog_comments: @blog_comments} %>
-	</div>
-
-
-  	<% if customer_signed_in? %>
-     	<div class="comment-form">コメント記入欄(50字以内)
-	      	<%= form_with model: [@blog, @blog_comment], data: {remote: true} do |f| %>
-    	    	<%= f.text_area :comment, size: "30x4" %>
-        		<%= f.submit 'コメント投稿', class: "btn btn-info" %>
-      		<% end %>
-    	</div>
-	<% end %>
-</div>
-</div>
 </div>
