--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -135,6 +135,12 @@ ul {
 
 @media screen and (max-width: 768px) {
 
+
+body {
+  padding-top: 60px;
+  height: 100%;
+  }
+
   .container {
     width: 90%;
   }
