--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -39,3 +39,9 @@
 	font-family: '昔々ふぉんと';
 	color: #2c7cff;
 }
+
+.favorite-index-title {
+	color: #ff82b2;
+	font-size: 30px;
+	font-family: '昔々ふぉんと';
+}
