--- a/app/views/customers/favorite.html.erb
+++ b/app/views/customers/favorite.html.erb
@@ -8,18 +8,18 @@
 				<% @favorites.each do |favorite| %>
 					<div class="flex-blog-content">
 						<% if favorite.blog_images.present? %>
-					      	<div class="b">
+					      	<div class="index-slider">
 								<% favorite.blog_images.each do |image| %>
-									<%= attachment_image_tag image, :photo, class: "blog-photo-index" %>
+									<%= attachment_image_tag image, :photo, class: "blog-index-photo" %>
 								<% end %>
 							</div>
 						<% else %>
-							<%= image_tag 'IMG_2667 2.jpeg', class: "blog-photo-index" %>
+							<%= image_tag 'IMG_2667 2.jpeg', class: "blog-index-photo" %>
 						<% end %>
 
 						<%= link_to blog_path(favorite) do %>
-							<div class="index-blog-title"><%= favorite.title %></div>
-							<div class="index-blog-address"><%= favorite.address %></div>
+							<div class="blog-title"><%= favorite.title %></div>
+							<div class="blog-address"><%= favorite.address %></div>
 						<% end %>
 					</div>
 				<% end %>
