--- a/app/views/blog_comments/_comment.html.erb
+++ b/app/views/blog_comments/_comment.html.erb
@@ -9,7 +9,7 @@
 		        	<td class="blog-show-comment-customer">
 		            	<%= link_to customer_path(blog_comment.customer), class: "customer_#{blog_comment.customer.id}", remote: true do %>
 		              		<%= attachment_image_tag blog_comment.customer, :profile_image, size: "40x40", fallback: "hans-jurgen-mager-Fbdr6gXJBVY-unsplash.jpg",class: "profile-image-style" %>
-		              		<%= blog_comment.customer.name %>
+		              		<p><%= blog_comment.customer.name %></p>
 		            	<% end %>
 		          	</td>
 		          	<td class="blog-show-content blog-show-comment">
